--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
-file(GLOB_RECURSE SD_SOURCES "*.c")
+file(GLOB_RECURSE SOURCES "*.c")
 
-idf_component_register(SRCS "main.c" ${SD_SOURCES}
-                       PRIV_REQUIRES esp_driver_sdmmc esp_driver_gpio fatfs esp_psram esp_wifi esp_http_server mqtt nvs_flash esp_netif lwip
+idf_component_register(SRCS "main.c" ${SOURCES}
+                       PRIV_REQUIRES esp_driver_sdmmc esp_driver_gpio fatfs esp_psram esp_wifi esp_http_server mqtt nvs_flash esp_netif lwip esp_driver_i2s esp_timer esp_audio_codec esp_audio_effects esp_capture esp_driver_i2c
                        INCLUDE_DIRS "")
