--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,3 +15,5 @@ dependencies:
   #   # All dependencies of `main` are public by default.
   #   public: true
   espressif/esp32-camera: ^2.1.2
+  espressif/esp_capture: ^0.7.6
+  espressif/esp_websocket_client: ^1.5.0
