--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -14,7 +14,7 @@ dependencies:
   #   # `public` flag doesn't have an effect dependencies of the `main` component.
   #   # All dependencies of `main` are public by default.
   #   public: true
-  espressif/esp32-camera: ^2.1.2
-  espressif/esp_capture: ^0.7.6
-  espressif/esp_websocket_client: ^1.5.0
+  espressif/esp32-camera: ">=2.1.2"
+  espressif/esp_capture: ">=0.7.6"
+  espressif/esp_websocket_client: ">=1.5.0"
 #  espressif/esp_peer: ^1.2.6
